# interior-minister

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  catalog_analysis.md  pyproject.toml
claudedocs/: nesy_architecture_analysis.md
notebooks/: 01_eda_tabular.ipynb  02_eda_geographic.ipynb  03_knowledge_graph.ipynb  04_nsvif_verification.ipynb  05_qwen_entity_linking.ipynb  06_crime_prediction.ipynb
ontology/: crime_types.ttl  justice_pipeline.ttl  locations.ttl
pipelines/: pipeline.yml
pipelines/assets/ingestion/: ingest_geographic.py  ingest_tabular.py
pipelines/assets/knowledge_graph/: build_graph.py  export_graph.py
pipelines/assets/quality/: verify_cross_dataset.py  verify_schemas.py
pipelines/assets/transformation/: transform_delitos.py  transform_delitos_sexuales.py  transform_geographic.py  transform_homicidios_mujeres.py  transform_medidas_alternativas.py  transform_sistema_carcelario.py  transform_violencia_domestica.py  upload_gcs.py
scripts/: create_bq_sources.py  inspect_gcs.py
src/interior_minister/: __init__.py  catalog.py  constraints.py  converters.py  gcs.py  graph.py  schemas.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
